server/compilers/goLiteJS/src/test/ml2/valid/shortdecl2.go
// short declarations of base types
package main

func main() {
    var n int
    var x float64
    var p bool
    var a rune

    n, x, p, a, s := 23, 23.0, true, 'a', "asdf"
}
