server/compilers/goLiteJS/src/test/ml2/invalid/binary5.go
// invalid || arguments
package main

func main() {
    _ = 23.0 || 23
}
